addons/monitoring/manifests/ingress-nginx/monitoring-ingress-nginx.yaml
# SPDX-FileCopyrightText: © 2024 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

# This web application can be configured to re-encode its relative URLs
# with a configurable prefix, see file `configmap.yaml`:
# root_url = https://k2s.cluster.local/monitoring
# This enables us to expose it through the ingress under this configured path
---
# This ingress will be merged with ingress provided in:
# addons/ingress/nginx/manifests/cluster-local-ingress.yaml
# and exposes the Grafana OSS web application on:
# https://k2s.cluster.local/monitoring
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-nginx-cluster-local
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: k2s.cluster.local
      http:
        paths:
          - backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
            path: /monitoring
            pathType: Prefix
